[package]
name = "cq"
version = "0.1.0"
edition = "2021"


[dependencies]
ark-ff = "0.3.0"
ark-poly = "0.3.0"
ark-ec = "0.3.0"
ark-std = "0.3.0"
fast-eval = { git = "https://github.com/geometryresearch/fast-eval" }
sha3 = "0.10.6"

[dev-dependencies]
ark-bn254 = "0.3.0"
rand_chacha = { version = "0.3.0", default-features = false }
